docs: add FLOW.md explaining SCIM architecture and IdP integration; fix Flyway baseline config
- Add FLOW.md: full walkthrough of where the IdP sits, where users are
  stored, the complete lifecycle (create/update/delete), request/response
  shapes, and step-by-step Okta and Entra ID connection guides
- Add spring.flyway.baseline-on-migrate and baseline-version=2 to
  application.properties so the app starts cleanly against a database
  that was previously managed by ddl-auto=update

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>